--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-styled-components": "^6.7.0",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
+    "modern-css-reset": "^1.4.0",
     "react": "^18.2.0",
     "react-chrono": "^1.22.0",
     "react-dom": "^18.2.0"
