--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "gatsby": "^5.13.3",
     "gatsby-plugin-google-analytics": "^5.7.0",
